完成A-附录校对

--- a/1/A/03.tex
+++ b/1/A/03.tex
@@ -153,7 +153,7 @@
 那么，力、质量和加速度之间的关系是怎样的呢？下面我们用实验研究这个问题．
 
 
-\section{加速度和力的关系}
+\section{加速度和力的关系}\label{sec-A-3-relationship-between-acceleration-and-force}
 质量一定时加速度和力的关系是怎样的呢？现在随同老师一起做实验来探讨这个问题．
 
 实验装置如图~\ref{fig_A_3-3} 所示，研究对象是图中所示的小车．小车放在光滑的平面上，前端拴着细绳，细绳跨过定滑轮，下面吊着一个砂桶，桶内装砂．
@@ -238,7 +238,7 @@
 \end{enumerate}
 
 
-\section{加速度和质量的关系}
+\section{加速度和质量的关系}\label{sec-A-3-relationship-between-acceleration-and-mass}
 外力一定时，加速度跟质量的关系又是怎样的呢？还是随同老师一起做实验来探讨这个问题．
 
 仍旧用上一节所用的实验装置．保持砂桶里的砂量不变，在小车上放砝码，改变运动物体的质量．
