--- a/physics.tex
+++ b/physics.tex
@@ -3,6 +3,7 @@
 
 \usepackage{tabularray}
 \UseTblrLibrary{booktabs}
+\UseTblrLibrary{diagbox}
 
 \begin{document}
 	
@@ -32,13 +33,13 @@
 	%\include{1/A/06} %物体的平衡
 	%\include{1/A/07} %机械能
 	%\include{1/A/08} %动量
-	\include{1/A/09} %机械振动和机械波
+	%\include{1/A/09} %机械振动和机械波
 	
-	%\include{1/A/app_01} %学生实验
-	%\include{1/A/app_02} %课外实验活动
+	\include{1/A/app_01} %学生实验
+	\include{1/A/app_02} %课外实验活动
 	
-	%\appendix
-	%\include{1/A/app_03} %附录
+	\appendix
+	\include{1/A/app_03} %附录
 	
 	
 	%
