--- a/fig/A/10-16.tex
+++ b/fig/A/10-16.tex
@@ -65,7 +65,7 @@
 }
 \begin{document}
 \small
-\begin{tikzpicture}[>=stealth,scale=1.0]
+\begin{tikzpicture}[>=stealth,scale=1.0,font=\small]
   \hand{xshift=-1mm,scale=0.6}
   \fill[darkgray](-1.1,-2.3)--(-1.3,-2.3)arc(90:150:0.1)--(-1.5,-2.35)--(-1.5,-2.4)--(-1.1,-2.4);
   \draw[fill=gray](0.4,-2.8)rectangle(-1.2,-2.0);
@@ -97,5 +97,11 @@
   \draw [semithick,fill=brown!70](-3,-4.7)--(-0.5,-4.7)--(-0.5,-4.9)--(-3,-4.9);
   \draw [semithick,fill=brown](-3,-4.9)--(-0.7,-4.9)--(-0.7,-5.2)--(-3,-5.2);
   \draw [semithick,fill=brown](-1.1,-6.5)--(-1.1,-5.2)--(-0.9,-5.2)--(-0.9,-6.5);
+  \draw[gray] (0,-1)--(0.3,-1) node [right=-0.08] {纸带} ;
+  \draw[gray] (0,-3.05)--(0.3,-3.05) node [right=-0.08] {夹子} ;
+  \draw[gray] (0,-3.65)--(0.3,-3.65) node [right=-0.08cm] {重物} ;
+  \draw[gray] (-1,-1.7) node [above=-0.08] {打点计时器} --(-0.7,-2)  ;
+  \draw [gray] (-1,-3.7)..controls(-1.3,-3) and (-1.5,-3.3)..(-1.1,-2.6);
+  \draw [gray] (-1.3,-3.7) node [below right=-0.08] {接电源} ..controls(-1.6,-3) and (-1.8,-3.3)..(-1.1,-2.2) ;
 \end{tikzpicture}
 \end{document}
