--- a/physics.tex
+++ b/physics.tex
@@ -35,11 +35,11 @@
 	%\include{1/A/08} %动量
 	%\include{1/A/09} %机械振动和机械波
 	
-	\include{1/A/app_01} %学生实验
-	\include{1/A/app_02} %课外实验活动
+	%\include{1/A/app_01} %学生实验
+	%\include{1/A/app_02} %课外实验活动
 	
-	\appendix
-	\include{1/A/app_03} %附录
+	%\appendix
+	%\include{1/A/app_03} %附录
 	
 	
 	%
@@ -58,7 +58,7 @@
 	%\mainmatter
 	
 	%正文内容
-	%\include{1/B/01} %分子运动论基础
+	\include{1/B/01} %分子运动论基础
 	%\include{1/B/02} %内能 能的转化和守恒定律
 	%\include{1/B/03} %气体的性质
 	%\include{1/B/04} %固体和液体的性质
