--- a/fig/B/2-2a.tex
+++ b/fig/B/2-2a.tex
@@ -69,8 +69,8 @@
       }
     }
   \end{scope}
-  \node at (-2.75,0.5){$P$};
-  \node at (2.2,1.1){$P'$};
+  \node at (-2.75,0.5){重物$P$};
+  \node at (2.2,1.1){重物$P'$};
   \node at (-1,1.7){量热器};
   }
 \end{tikzpicture}
