--- a/fig/B/2-2b.tex
+++ b/fig/B/2-2b.tex
@@ -19,7 +19,7 @@
   }
   \fill[left color=gray,right color=gray,middle color=white](-0.2,-3.5)rectangle(0.2,1.0)node[text=black,right]{轴};
   \draw[darkgray,fill=cyan!30,fill opacity=0.5,line width=1mm](-0.25,0.1)--++(0,-0.1)--++(-2,-0.5)--++(0,-3.5)--++(4.5,0)--++(0,3.5)--++(-2,0.5)--++(0,0.1);
-  \draw[thin,](0.9,-0.9)--(1.3,0.5)node[right]{\parbox{6em}{\centering 固定在量热器内壁的叶片}}--(0.9,-2.4);
+  \draw[thin,](0.9,-0.9)--(1.3,0.5)node[right]{\parbox{6em}{\centering 固定在量热器内壁上的叶片}}--(0.9,-2.4);
   \draw[thin,](-0.9,-1.6)--(-1.3,0.5)node[left]{\parbox{4em}{\centering 固定在轴上的叶片}}--(-0.9,-3.1);
 \end{tikzpicture}
 \end{document}
