--- a/fig/B/3-10.tex
+++ b/fig/B/3-10.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \small
 \begin{tikzpicture}[>=stealth,scale=0.8]
-  \draw[<->] (0,6.5)node [right]{$p$}--(0,1)--(6,1) node [right]{{$t^\circ$C}};
+  \draw[<->] (0,6.5)node [right]{$p$}--(0,1)--(6,1) node [right]{{$t \; ^\circ \rm{C}$}};
   \draw[color=black, ultra thick] (0,3)--(5,6+1/3);
   \draw [dashed] (1.5,+1)--(1.5,4)--(0,4);
   \draw [dashed] (3,+1)--(3,5)--(0,5);
