--- a/fig/B/3-11.tex
+++ b/fig/B/3-11.tex
@@ -8,7 +8,7 @@
 \begin{document}
 \small
 \begin{tikzpicture}[>=stealth,scale=0.65]
-  \draw[<->] (0,6.5)node [right]{$p$}--(0,0)--(6,0) node [right]{{$t^\circ$C}};
+  \draw[<->] (0,6.5)node [right]{$p$}--(0,0)--(6,0) node [right]{{$t \; ^\circ \rm{C}$}};
   \draw(-6,0)--(0,0);
   \draw[color=black, ultra thick] (0,2.5)--(5,5);
   \draw [dashed] (0,2.5)--(-5,0);
