--- a/fig/B/6-25.tex
+++ b/fig/B/6-25.tex
@@ -16,10 +16,11 @@
   \draw(0,0)--(3,0);
   \draw (3,0) to[C] (3, 2.5);
   \draw (0,2.5) to [battery] (0,0);
-  \draw(0,2.5)--(3,2.5);        
-  \node at (3.75, 1){$B$};
-  \node at (3.75, 1.5){$A$};
-  \node at (2.75, .9){$-Q$};
-  \node at (2.75, 1.6){$+Q$}; 
+  \draw(0,2.5)--(3,2.5); 
+   \node at (0.75, 1.25){$60 \; \rm{V}$};
+  \node at (3.5, 1){$B$};
+  \node at (3.5, 1.5){$A$};
+  \node at (2.6, .9){$-Q$};
+  \node at (2.6, 1.6){$+Q$}; 
 \end{circuitikz}
 \end{document}
