--- a/fig/B/7-35.tex
+++ b/fig/B/7-35.tex
@@ -19,5 +19,7 @@
   \draw (1-.2,0)--(1-.2,-1.5) to [battery2] (2+.2,-1.5)--(2+.2,0);
   \draw (1-.2,0) [fill=black] circle (1.2pt);
   \draw (2+.2,0) [fill=black] circle (1.2pt);
+  \draw [fill=white](0,0) circle (2pt);
+  \draw [fill=white](3,0) circle (2pt);
 \end{circuitikz}
 \end{document}
