--- a/fig/B/7-40.tex
+++ b/fig/B/7-40.tex
@@ -19,7 +19,7 @@
   \draw (1,-0.7) [fill=black] circle (1.2pt);
   \draw (0,1.1) to [rmeter, t=G] (0,0.25);
   \draw [->](0,0.25)--(-.5,.25)--(-.5,0)node[below]{$D$};
-  \node at (-1.75,0) [below]{$l_1$};
-  \node at (1.25,0) [below]{$l_2$};
+  \node at (-1.75,0) [below]{$\ell_1$};
+  \node at (1.25,0) [below]{$\ell_2$};
 \end{circuitikz}
 \end{document}
