--- a/fig/B/7-14.tex
+++ b/fig/B/7-14.tex
@@ -16,8 +16,8 @@
   \draw (0,0) -- (5,0) to [R=$R_1$] (5,4)--(0,4);
   \draw (3,0) to [R=$R_2$, *-*] (3,4);
   \draw [->] (.5,4)--(1.5,4)node [above]{3A};
-  \node at (6.2, 2.4) {5mA};
-  \node at (6.2, 1.6) {100$\Omega$};
+  \node at (6.2, 2.4) { \qty{5}{mA}};
+  \node at (6.2, 1.6) {\qty{100}{\ohm}};
   \draw [fill=white](0,4) circle (2pt);
   \draw [fill=white](0,0) circle (2pt);
 \end{circuitikz}
