--- a/fig/B/7-33.tex
+++ b/fig/B/7-33.tex
@@ -14,5 +14,7 @@
 \begin{circuitikz}[>=latex, scale=1.0,european]
   % \useasboundingbox(0.9,0)rectangle(5.1,5);
 \draw (1,0)node [above]{$+$}--(0,0) to [battery2] (-1,0) to [battery2] (-2,0)to [battery2] (-3,0)to [battery2] (-4,0)--(-5,0) node [above]{$-$};
+\draw [fill=white](1,0) circle (2pt);
+\draw [fill=white](-5,0) circle (2pt);
 \end{circuitikz}
 \end{document}
