--- a/fig/B/8-26a.tex
+++ b/fig/B/8-26a.tex
@@ -20,7 +20,7 @@
   {
       \draw (\x:.5)--(\x:.75);
   }
-  \node at (-1.5,1.75){D};
+  \node at (-1.5,1.5){$\rm{D}$};
   \draw[->] (-2,-.5) arc (250:-60:.5);
 \end{circuitikz}
 \end{document}
