--- a/fig/B/8-26b.tex
+++ b/fig/B/8-26b.tex
@@ -14,6 +14,6 @@
 \begin{circuitikz}[>=latex, scale=1.0,european]
   % \useasboundingbox(0.9,0)rectangle(5.1,5);
   \draw (0,0)--(0,2)to [empty diode, fill=black](3,2)to [lamp] (3,0)  to [battery](0,0);
-  \node at (1.5,2.75){D};
+  \node at (1.5,2.5){$\rm{D}$};
 \end{circuitikz}
 \end{document}
