--- a/fig/B/8-6a.tex
+++ b/fig/B/8-6a.tex
@@ -11,7 +11,7 @@
   % \useasboundingbox(-1,-2)rectangle(8,6);
   \draw[->](0,0)--++(45:1.0);
   \fill[inner color=white,outer color=red!50](0,0)circle(0.2)node{\scriptsize$+$};
-  \fill[inner color=white,outer color=blue!50](125:0.17)circle(0.04)node[above left]{\tiny$-$};
+  \fill[inner color=white,outer color=blue!50](125:0.17)circle(0.04)node[above]{$-e$};
   \draw[->](-0.5,1.8)--++(-30:1.0);
   \fill[inner color=white,outer color=blue!50](-0.5,1.8)circle(0.04)node[above]{$-e$};
 \end{tikzpicture}
