完成B-附录校对

--- a/1/A/app_03.tex
+++ b/1/A/app_03.tex
@@ -56,7 +56,7 @@
 	\caption{常用的力学量的国际单位制单位}\label{tab_A_10-5}
 	{
 	\zihao{5}
-    \begin{tblr}{colspec={cc|ccc|c|c}}
+    \begin{tblr}{colspec={cc|ccc|c|c},row{13}={valign=m,bg=gray!40}}
         \hline
          \SetCell[c=2]{c} 物理量     & & \SetCell[c=3]{c} 单位 & & & \SetCell[r=2]{c} 量纲式 &  \SetCell[r=2]{c}备注\\
         名称 & 符号 & 名称 & 中文 & 英文 & & \\
