--- a/fig/B/9-11.tex
+++ b/fig/B/9-11.tex
@@ -21,8 +21,8 @@
   \draw(-.7,-1.5) --(-.7,-1.5|-hb.wiper)--(hb.wiper);
   \draw (0,2) to [rmeter, t=G] (0,.5);
   \draw[->] (0,.5)--(-.7,.5)--(-.7,0)node [below]{$D$};
-  \node at (-1.85,0)[below]{$l_1$};
-  \node at (1.15,0)[below]{$l_2$};
+  \node at (-1.85,0)[below]{$\ell_1$};
+  \node at (1.15,0)[below]{$\ell_2$};
   % \node at (2,-2)[above]{$K$};
 \end{circuitikz}
 \end{document}
