--- a/1/B/app_03.tex
+++ b/1/B/app_03.tex
@@ -2,23 +2,26 @@
 
 \begin{table}[htbp]
     \centering
-    \begin{tabular}{cc|cc|c|c}
+    {
+    	\zihao{5}
+    \begin{tblr}{colspec={cc|ccc|c|c},row{5,9}={valign=m,bg=gray!40}}
         \toprule
-        \multicolumn{2}{c|}{物理量} & \multicolumn{2}{c|}{单位} & 量纲式 & 备注\\
-        名称&符号 &中文符号&英文符号& & \\
+        \SetCell[r=1,c=2]{c} 物理量 &  &  \SetCell[r=1,c=3]{c} 单位 & & & 量纲式 & 备注\\
+        名称& 符号& 名称 &中文符号&英文符号& &  \\
         \midrule
-        热力学温度      &   $T$               &    开      &    K  &  $[\Theta]$  & \\
-        热量      &   $Q$             &     焦     &    J  &  $[L^2MT^{-2}]$ & \\
-        比热      &   $c$             &  焦/千克$\cdot $开        & J/(kg$\cdot$K)  & $[L^2T^{-2}\Theta^{-1}]$ & \\  
-        电流      &    $I$             &   安       &    A & $[I]$ & \\
-        电量      &    $Q$            &    库      &    C & $[TI]$ & $1  \text{ 库}=1 \text{ 安} \cdot \text{秒} $ \\
-        电场强度      &  $E$              &  伏/米$^2$        &   V/m$^2$  & $[LMT^{-3}I^{-1}]$ & \\
-        电势（差）、电压      & $U(V)$              &    伏      &   V  & $[L^2MT^{-3}I^{-1}]$ & $ 1 \text{ 伏} = 1 \text{ 瓦}/\text{安} $\\
-        电动势      &  $\mathcal{E}$              &    伏      &    V & $[L^2MT^{-3}I^{-1}]$ & \\
-        电容      &    $C$          &    法      &   F  & $[L^{-2}M^{-1}T^{4}I^{2}]$ & $1 \text{ 法} = 1 \text{ 库}/\text{伏}$ \\
-        电阻      &    $R$        &     欧     &    $\Omega$       & $[L^{2}MT^{-3}I^{-2}]$ & $1 \text{ 欧}=1 \text{ 伏}/\text{安}$ \\
-        电阻率      &    $\rho$          &   欧$\cdot$米       & $\Omega\cdot{\rm m}$   &  $[L^{3}MT^{-3}I^{-2}]$ & \\
+        热力学温度      &   $T$        & 开尔文       &    开      &    $\UKA$  &  $[\Theta]$  & \\
+        热量      &   $Q$         & 焦耳    &     焦     &    $\UJA$  &  $[L^2MT^{-2}]$ & \\
+        比热      &   $c$         & {焦耳每千克\\每开尔文}    &  {焦/\\（千克$\cdot $开）}        &  $\UJkgK$   & $[L^2T^{-2}\Theta^{-1}]$ & \\  
+        电流      &    $I$        & 安培     &   安       &    $\UAA$ & $[I]$ & \\
+        电量      &    $Q$      & 库伦      &    库      &    $\UCA$ & $[TI]$ & $1  \text{ 库}=1 \text{ 安} \cdot \text{秒} $ \\
+        电场强度      &  $E$        & 伏特每米      &  伏/米        &   $\UVmA$  & $[LMT^{-3}I^{-1}]$ & \\
+         {电势、电压\\电势差}     &  $U(V)$      & 伏特        &    伏      &   $\UVA$  & $[L^2MT^{-3}I^{-1}]$ & $ 1 \text{ 伏} = 1 \text{ 瓦}/\text{安} $\\
+        电动势      &  $\mathcal{E}$      & 伏特        &    伏      &    $\UVA$ & $[L^2MT^{-3}I^{-1}]$ & \\
+        电容      &    $C$     & 法拉     &    法      &   $\UFA$  & $[L^{-2}M^{-1}T^{4}I^{2}]$ & $1 \text{ 法} = 1 \text{ 库}/\text{伏}$ \\
+        电阻      &    $R$     & 欧姆   &     欧     &    $\UOA$       & $[L^{2}MT^{-3}I^{-2}]$ & $1 \text{ 欧}=1 \text{ 伏}/\text{安}$ \\
+        电阻率      &    $\rho$     & 欧姆米     &   欧$\cdot$米       & $\UOmA$   &  $[L^{3}MT^{-3}I^{-2}]$ & \\
         \bottomrule
-    \end{tabular}
+    \end{tblr}
+	}
 \end{table}
 
