--- a/fig/B/9-3.tex
+++ b/fig/B/9-3.tex
@@ -12,6 +12,7 @@
   % \useasboundingbox(-1.4,-1.4)rectangle(1.4,1.4);
   \begin{scope}[xshift=-3mm,yshift=0.8cm]
     \fill[darkgray](-0.8,3.1)circle(0.05)(0.8,3.1)circle(0.05)(-0.8,2.9)circle(0.05)(0.8,2.9)circle(0.05)(1.2,3.0)circle(0.05)(-1.2,3.0)circle(0.05);
+    \draw(-0.1,3.4)arc(180:-90:0.1)--++(0,-0.2);
     \draw(1.2,3)--++(0,-0.2)arc(90:360:0.1);
     \coordinate (A1) at (1.2,2.6);
     \draw(-1.2,3)--++(0,-0.2)arc(90:-180:0.1);
