--- a/fig/C/1-30a.tex
+++ b/fig/C/1-30a.tex
@@ -25,10 +25,11 @@
   \tkzLabelPoints[right](c,d)
   \draw[very thick](a')--+(0,.25);
   \draw[very thick](d')--+(0,.25);
-  \draw[->](d')--+(0.2,.7)node[above]{$F_{ad}$};
+  \draw[->]([shift={(0.08,0.05)}]d')--+(0,.65)node[right]{$F_{ad}$};
   \draw[->](1,0.5)--+(0.3,.6)node[above]{$F_{cd}$};
   \draw[->](-1,0)--+(-0.3,-.6)node[below]{$F_{ab}$};
-  \draw[->](0,-.7)--+(-0.2,-.7)node[left]{$F_{bc}$};
-  \node at (0,1.3)[right]{$\theta$};
+  \draw[->](0.08,-.65)--+(0,-.65)node[right]{$F_{bc}$};
+  \node at (-0.3,1.1)[right]{$\theta$};
+  \draw (-0.3,1) arc(0:35:0.2);
 \end{tikzpicture}
 \end{document}
