--- a/fig/C/1-6b.tex
+++ b/fig/C/1-6b.tex
@@ -58,5 +58,12 @@
   \draw[->,red6](-0.2,0.5)--++(0,0.6)node[left,text=black]{$I$};
   \draw[azure6,postaction={decorate},decoration={markings,mark=at position 0.5 with {\arrow{>}}}](-0.3,-1.5)arc(180:360:0.3 and 0.08);
   \node at (0.3,-1.5)[right]{$B$};
+  \draw[-latex]  (-0.8,0) arc
+  [
+  start angle=140,
+  end angle=240,
+  x radius=1,
+  y radius =0.5
+  ] ;
 \end{tikzpicture}
 \end{document}
