--- a/physics.tex
+++ b/physics.tex
@@ -67,11 +67,11 @@
 	%\include{1/B/07} %稳恒电流
 	%\include{1/B/08} %物质的导电性
 	
-	\include{1/B/app_01} %学生实验
-	\include{1/B/app_02} %课外实验活动
+	%\include{1/B/app_01} %学生实验
+	%\include{1/B/app_02} %课外实验活动
 	
-	\appendix
-	\include{1/B/app_03} %附录
+	%\appendix
+	%\include{1/B/app_03} %附录
 	
 	
 	%
@@ -90,7 +90,7 @@
 	%\mainmatter
 	
 	%正文内容
-	%\include{1/C/01} %磁场
+	\include{1/C/01} %磁场
 	%\include{1/C/02} %电磁感应
 	%\include{1/C/03} %交流电
 	%\include{1/C/04} %电磁振荡和电磁波
